# microscpi

./: Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.github/workflows/: build.yml  coverage.yml
.zed/: settings.json
examples/doc/: Cargo.toml  build.rs
examples/doc/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
microscpi/: Cargo.toml
microscpi-common/: Cargo.toml
microscpi-common/src/: lib.rs
microscpi-doc/: Cargo.toml
microscpi-doc/src/: lib.rs
microscpi-macros/: Cargo.toml
microscpi-macros/src/: command.rs  doc.rs  lib.rs  tree.rs
microscpi-macros/tests/: doc_export_test.rs
microscpi/benches/: basic.rs  parser.rs
microscpi/examples/: basic.rs
microscpi/fuzz/: Cargo.toml
microscpi/fuzz/fuzz_targets/: fuzz_interface.rs  fuzz_parser.rs  fuzz_processing.rs
microscpi/src/: commands.rs  context.rs  error.rs  error_queue.rs  interface.rs  interpreter.rs  lib.rs  parser.rs  registers.rs  response.rs  tokens.rs  tree.rs  value.rs
microscpi/tests/: tests.rs
