[package]
name = "microscpi-doc"
description = "Documentation generation library for microscpi."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "microscpi_doc"

[dependencies]
syn = { version = "2.0.77", features = ["full", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
regex = { version = "1.10" }
microscpi-common = { workspace = true, features = ["serde"] }
