[package]
name = "microscpi-macros"
description = "Required macros for the microscpi library."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "microscpi_macros"
proc-macro = true
test = false

[dependencies]
syn = { version = "2.0.77", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1"
proc-macro-error2 = "2.0.1"
