[package]
name = "microscpi"
description = "A Rust library for creating SCPI interfaces."
keywords = ["scpi", "embedded", "async"]
categories = ["embedded", "parsing", "no-std::no-alloc"]
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "microscpi"

[features]
defmt = ["dep:defmt"]

[[bench]]
name = "parser"
harness = false

[dependencies]
microscpi-macros.workspace = true
heapless = "0.8.0"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
