[package]
name = "microscpi"
description = "A Rust library for creating SCPI interfaces."
keywords = ["scpi", "embedded", "async"]
categories = ["embedded", "parsing", "no-std::no-alloc"]
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
name = "microscpi"

[features]
std = []
defmt = ["dep:defmt"]
embedded-io-async = ["dep:embedded-io-async"]

[dependencies]
microscpi-macros.workspace = true
heapless = "0.8.0"
defmt = { version = "0.3", optional = true }
embedded-io-async = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
