[package]
name = "microscpi"
description = "A Rust library for creating SCPI interfaces."
keywords = ["scpi", "embedded", "async"]
categories = ["embedded", "parsing", "no-std::no-alloc"]
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
name = "microscpi"

[[bench]]
name = "basic"
path = "benches/basic.rs"
harness = false

[features]
default = ["registers"]
std = []
defmt = ["dep:defmt"]
registers = ["dep:bitflags"]

[dependencies]
microscpi-macros.workspace = true
heapless = "0.8.0"
defmt = { version = "1", optional = true }
bitflags = { version = "2.9.0", optional = true }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
criterion = { version = "0.6", features = ["html_reports"] }

[package.metadata.release]
pre-release-replacements = [
  { file = "../README.md", search = 'microscpi = "[a-z0-9\\.-]+"', replace = 'microscpi = "{{version}}"' },
]
