[package]
name = "microscpi-fuzz"
version = "0.2.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }

[dependencies.microscpi]
path = ".."
features = ["std"]

[[bin]]
name = "fuzz_interface"
path = "fuzz_targets/fuzz_interface.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false
